# group5

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.MD  build-linux-gcc.sh  build-profiling.sh  build-windows.sh  build.sh  build_and_run_tests.sh  build_lsp.sh  flake.nix  format.sh  spec.html  spec.md  temp_diff.txt
.github/workflows/: build.yml  lint.yml
assets/bear/: bear_full.mtl
docs/: .gitignore  Gemfile  _config.yml  final-project.md  final-projects.md  index.md  project-spec.md  spec.txt  weekly-reports.md
docs/_includes/: head.html  sidebar.html
docs/_layouts/: default.html
docs/game-logic/: index.md  phase-a.md  phases-b-to-f.md
docs/game-logic/game1/: index.md
docs/game-logic/story/: index.md
docs/individual-reports/: alain-zhang-individual-report.md  jacob-root-individual-report.md  jiaying-chen-individual-report.md  phillip-mai-individual-report.md  sarah-balatbat-individual-report.md  shengrui-chen-individual-report.md  ziyue-liu-individual-report.md
docs/public/css/: hyde.css  poole.css
html/: annotated.html  classes.html  components_8h_source.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_075bb3ff235063c77951cd176d15a741_dep.map  dir_075bb3ff235063c77951cd176d15a741_dep.md5  dir_4f38db07240614f25134cb9a8bebbaf9.html  dir_4f38db07240614f25134cb9a8bebbaf9_dep.map  dir_4f38db07240614f25134cb9a8bebbaf9_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6908ff505388a07996d238c763adbdab.html  dir_6908ff505388a07996d238c763adbdab_dep.map  dir_6908ff505388a07996d238c763adbdab_dep.md5  files.html  graph_legend.html  hello_8h_source.html  index.html  protocol_8h_source.html  structshared_1_1AssignPacket-members.html  structshared_1_1AssignPacket.html  structshared_1_1DespawnPacket-members.html  structshared_1_1DespawnPacket.html  structshared_1_1Entity-members.html  structshared_1_1Entity.html  structshared_1_1InputPacket-members.html  structshared_1_1InputPacket.html  structshared_1_1PlayerInput-members.html  structshared_1_1PlayerInput.html  structshared_1_1Position-members.html  structshared_1_1Position.html  structshared_1_1SpawnPacket-members.html  structshared_1_1SpawnPacket.html  structshared_1_1StateEntry-members.html  structshared_1_1StateEntry.html  structshared_1_1StateHeader-members.html  structshared_1_1StateHeader.html  structshared_1_1Velocity-members.html  structshared_1_1Velocity.html
html/search/: all_0.js  all_4.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  searchdata.js
latex/: annotated.tex  components_8h_source.tex  files.tex  hello_8h_source.tex  protocol_8h_source.tex  refman.tex  structshared_1_1AssignPacket.tex  structshared_1_1DespawnPacket.tex  structshared_1_1Entity.tex  structshared_1_1InputPacket.tex  structshared_1_1PlayerInput.tex  structshared_1_1Position.tex  structshared_1_1SpawnPacket.tex  structshared_1_1StateEntry.tex  structshared_1_1StateHeader.tex  structshared_1_1Velocity.tex
src/: sprint.md
src/client/: asset.cpp  asset.h  client_game.cpp  client_game.h  client_graphics.cpp  client_graphics.h  client_network.cpp  client_network.h  global.h  link_smoke.cpp  main.cpp  network.cpp  network.h  shaders.cpp  shaders.h  spsc_queue.h  util.cpp
src/client/shaders/: fragment.glsl  fragment_skybox.glsl  vertex.glsl  vertex_skybox.glsl
src/server/: game_state.cpp  game_state.h  gltf_inspect.cpp  main.cpp  map_loader.cpp  map_loader.h  network.cpp  network.h  physics_engine.cpp  physics_engine.h  scene.cpp  scene.h  server_game.cpp  server_game.h  server_level_loader.cpp  server_level_loader.h  server_network.cpp  server_network.h
src/shared/: assets.h  component_registry.h  components.h  hello.cpp  hello.h  input.h  lighting.h  map_format.h  mesh_loader.cpp  mesh_loader.h  protocol.h  simple_profiler.h  util.h
src/shared/net/: packet_handler.h  packet_utils.h
tests/: CMakeLists.txt  network_tests.cpp  smoke_test.cpp
toolchains/: windows.cmake
weekly-reports/: Rebecca.MD  individual-report-template.MD  phil.MD  sarah.md
